Converting from nemo-utils-cpp to cpp-utils.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>nemo-utils-cpp</name>
+	<name>cpp-utils</name>
 	<comment></comment>
 	<projects>
 	</projects>
